<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.ign.validator</groupId>
	<artifactId>validator</artifactId>
	<packaging>pom</packaging>
	<version>4.0.0-SNAPSHOT</version>
	<name>Validator</name>

	<scm>
		<url>https://github.com/IGNF/validator</url>
		<tag>HEAD</tag>
		<developerConnection>scm:git:git@github.com:IGNF/validator.git</developerConnection>
	</scm>

	<description>
        This program validates data according to a FeatureCatalogue
	</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<!--
		See following page for the required java version
		http://docs.geotools.org/latest/userguide/build/install/jdk.html#
		 -->
		<geotools.version>21.2</geotools.version>
		<log4j.version>2.12.0</log4j.version>
		<jackson.version>2.9.10</jackson.version>
		<jackson.databind.version>2.9.10.4</jackson.databind.version>
		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
	</properties>
	<organization>
		<name>IGN - Service RDS</name>
		<url>http://www.ign.fr</url>
	</organization>

	<developers>
		<developer>
			<name>Clément Bouché</name>
			<email>clement.bouche(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Florian Cerizay</name>
			<email>florian.cerizay(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Mickaël Borne</name>
			<email>mickael.borne(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>CeCILL B License</name>
			<url>http://www.cecill.info/licences/Licence_CeCILL-B_V1-fr.html</url>
		</license>
	</licenses>

	<modules>
		<module>validator-core</module>
		<module>validator-cli</module>
		<module>validator-plugin-cnig</module>
		<module>validator-plugin-dgpr</module>
	</modules>


	<dependencies>
		<!-- Log4J2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- log4j2 dependency -->
		<dependency>
			<groupId>org.codehaus.woodstox</groupId>
			<artifactId>woodstox-core-asl</artifactId>
			<version>4.4.1</version>
		</dependency>

		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.databind.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- jdom -->
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>1.0</version>
		</dependency>

		<!-- jaxen (XPath) -->
		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.2.0</version>
		</dependency>

		<!-- Apache common-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- Apache common cli -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Apache common csv -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.7</version>
		</dependency>

		<!-- org.apache.commons.lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- geotools -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- geotools epsg references -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>


		<!-- embedding light database wkt for common CRS -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- jaxb -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.1</version>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<version>2.6.3</version>
			<scope>test</scope>
		</dependency>

		<!-- mockito -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>

		<!-- JSONAssert -->
		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			<version>1.5.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Driver SQLite -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.28.0</version>
		</dependency>

		<!-- Drive postgresql -->
		<dependency>
		    <groupId>postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>${postgresql.version}</version>
		</dependency>

		<!-- JDK 8 libraries -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.4.0-b180830.0438</version>
		</dependency>
	</dependencies>

	<repositories>

		<repository>
			<id>maven</id>
			<name>Maven repository 2</name>
			<url>http://central.maven.org/maven2/</url>
		</repository>

		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>

	</repositories>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<tagNameFormat>v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
